fix intersect on firefox android

--- a/src/Pages/Home.module.scss
+++ b/src/Pages/Home.module.scss
@@ -33,8 +33,7 @@
 }
 
 .intersectBox {
-  height: 30px;
-  padding-bottom: 15px;
+  padding-bottom: 50px;
 }
 
 .toast {
